--- a/jogo/json/configuracao.json
+++ b/jogo/json/configuracao.json
@@ -3,11 +3,11 @@
   "equipes": [
     {
       "nome": "Compilação Precoce",
-      "tipoRobos": ["XYZ SONDA", "FTT", "XYZ CARROCERIA SONDA"]
+      "tipoRobos": ["XYZ SONDA", "XYZ CARROCERIA SONDA"]
     },
     {
       "nome": "Bigode Grosso",
-      "tipoRobos": ["XYZ CARROCERIA", "FTT CARROCERIA", "XYZ CARROCERIA SONDA"]
+      "tipoRobos": ["XYZ CARROCERIA"]
     }
   ]
 }
